    dpkg-deb --info or --field use mkdtemp() to create a temporary directory
    instead of insecure tempnam() or tmpnam() functions.
  * Remove --license and --licence options from tools.
  * Securely remove newly installed files when rolling-back a failed unpack.
  * Change default lzma compression level from 9 to 6.
    Thanks to Jonathan Nieder for the initial patch.

  [ Modestas Vainius ]
  * Implement symbol patterns (Closes: #563752). From now on, it is possible to
    match multiple symbols with a single entry in the symbol file template.
    While the concept is not new (wildcards also match multiple symbols),
    patterns cover much more ground and are a lot more flexible. Together with
    the framework, 3 basic pattern types are supported:
    - c++ - matching C++ symbols by their demangled name (as emitted by
      c++filt);
    - symver - matching by symbol version. It replaces the wildcards feature
      which is still supported for backwards compatibility but is reimplemented
      on top of the new framework;
    - regex - matching symbol names with perl regular expression.
    Basic patterns may be combined where it makes sense.
  * As a positive side effect of the new symbol patterns implementation,
    patterns are now treated like normal symbols whenever possible, e.g. a
    pattern is MISSING if it does not match anything. As a result,
    dpkg-gensymbols is now able to detect NEW/MISSING symbols when patterns are
    present in the symbol file (Closes: #541464). Please note, however, that
    there is no way to detect symbol changes in the pattern match sets.
  * Add source version to the dpkg-gensymbols diff label, reformat it according
    to the rules of dpkg-name.
  * Add -a<arch> option to dpkg-gensymbols.
  * Add -q option to dpkg-gensymbols. -c0 will never fail but still generate a
    diff. Use -c0 -q to keep dpkg-gensymbols completely quiet as before
    (Closes: #568228).

  [ Jonathan Nieder ]